infra/thmanyah/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api-ns
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
